[gd_scene load_steps=28 format=3 uid="uid://bb0ojl4hx61c3"]

[ext_resource type="Shader" path="res://player/wants_dash.gdshader" id="1_j0mrd"]
[ext_resource type="Script" path="res://enemies/enemy_1.gd" id="1_nl2ya"]
[ext_resource type="Texture2D" uid="uid://cqqbap4nxnyp2" path="res://sprites/light.png" id="2_7e2my"]
[ext_resource type="Shader" uid="uid://0dm11c6qayeu" path="res://shaders/hit.tres" id="3_4o8mh"]
[ext_resource type="Texture2D" uid="uid://bywlh5h78s0bq" path="res://sprites/enemies/purple1.png" id="3_v0wlu"]
[ext_resource type="Texture2D" uid="uid://r58t6qn0b5dq" path="res://sprites/enemies/purple2.png" id="4_o0i3y"]
[ext_resource type="Texture2D" uid="uid://70ld27bpj155" path="res://sprites/enemies/purple/purple_dies1.png" id="4_qpt75"]
[ext_resource type="Texture2D" uid="uid://beachhw4bq7cx" path="res://sprites/enemies/purple3.png" id="5_pb6be"]
[ext_resource type="Texture2D" uid="uid://cjjy2nhs7g8tk" path="res://sprites/enemies/purple/purple_dies2.png" id="5_rmfq1"]
[ext_resource type="Texture2D" uid="uid://cy8sjdosup322" path="res://sprites/enemies/purple/purple_dies3.png" id="6_plwqg"]
[ext_resource type="Texture2D" uid="uid://cqi8gfqkoua0h" path="res://sprites/enemies/purple/purple_dies4.png" id="7_jeaus"]
[ext_resource type="Texture2D" uid="uid://cpu5q0oh8few6" path="res://sprites/enemies/purple/purple_dies5.png" id="8_qi34j"]
[ext_resource type="Texture2D" uid="uid://3tslggekw40r" path="res://sprites/enemies/purple/purple_dies6.png" id="9_1pb5e"]
[ext_resource type="Texture2D" uid="uid://q517835lfj21" path="res://sprites/p_particle.png" id="12_wy7ln"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="14_oply8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pbie8"]
shader = ExtResource("1_j0mrd")
shader_parameter/rect_size = Vector2(0.1, 0.1)
shader_parameter/bness = 1.0
shader_parameter/fall_off_scale = 3.0
shader_parameter/b_offset = 0.0
shader_parameter/speed = 4.517
shader_parameter/noise_intensity = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6iaa8"]
resource_local_to_scene = true
shader = ExtResource("1_j0mrd")
shader_parameter/rect_size = Vector2(0.13, 0.095)
shader_parameter/bness = 1.0
shader_parameter/fall_off_scale = 3.0
shader_parameter/b_offset = 0.0
shader_parameter/speed = 1.0
shader_parameter/noise_intensity = 0.126

[sub_resource type="SpriteFrames" id="SpriteFrames_hgbdu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qpt75")
}, {
"duration": 1.0,
"texture": ExtResource("5_rmfq1")
}, {
"duration": 1.0,
"texture": ExtResource("6_plwqg")
}, {
"duration": 1.0,
"texture": ExtResource("7_jeaus")
}, {
"duration": 1.0,
"texture": ExtResource("8_qi34j")
}, {
"duration": 1.0,
"texture": ExtResource("9_1pb5e")
}],
"loop": false,
"name": &"dies",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_v0wlu")
}, {
"duration": 1.0,
"texture": ExtResource("4_o0i3y")
}, {
"duration": 1.0,
"texture": ExtResource("5_pb6be")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5jufo"]
resource_local_to_scene = true
shader = ExtResource("3_4o8mh")
shader_parameter/isHit = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_lueaj"]
length = 0.0115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4443o"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvf1"]
_data = {
"RESET": SubResource("Animation_lueaj"),
"hit_flash": SubResource("Animation_4443o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vfol3"]
radius = 216.68

[sub_resource type="CircleShape2D" id="CircleShape2D_27fh4"]
radius = 67.42

[sub_resource type="Curve" id="Curve_lcko2"]
_data = [Vector2(0, 0.736264), 0.0, 0.0, 0, 0, Vector2(0.0539419, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.195021, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.975104, 0.406593), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Animation" id="Animation_sf82b"]
resource_name = "player_near"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4re6e"]
_data = {
"player_near": SubResource("Animation_sf82b")
}

[node name="enemy1" type="CharacterBody2D" groups=["enemy"]]
editor_description = "enemy that chases the player"
material = SubResource("ShaderMaterial_pbie8")
scale = Vector2(0.45, 0.45)
collision_layer = 4
collision_mask = 2
collision_priority = 2.0
script = ExtResource("1_nl2ya")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.870588, 0.623529, 1, 1)
energy = 0.2
texture = ExtResource("2_7e2my")
texture_scale = 0.67

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
modulate = Color(0.898672, 0.978418, 0, 1)
self_modulate = Color(0.912013, 0.899271, 7.70092e-07, 1)
material = SubResource("ShaderMaterial_6iaa8")
position = Vector2(4.987, 0)
rotation = 1.5708
scale = Vector2(1.205, 1.205)
sprite_frames = SubResource("SpriteFrames_hgbdu")
animation = &"dies"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5jufo")
position = Vector2(6.66667, -1.43653e-14)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_hgbdu")
animation = &"dies"

[node name="HitFlash" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="player_near" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_near"]
shape = SubResource("CircleShape2D_vfol3")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_27fh4")

[node name="CollisionShape2D_disabled" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_27fh4")
disabled = true

[node name="isHitAnimation" type="Timer" parent="."]
wait_time = 0.7

[node name="splash" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("12_wy7ln")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_lcko2")

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_oply8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4re6e")
}

[connection signal="body_entered" from="player_near" to="." method="_on_player_near_body_entered"]
[connection signal="body_exited" from="player_near" to="." method="_on_player_near_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
